# job_portal_django

./: .env.example  .gitignore  LICENSE  README.md  import_jobs.py  pyproject.toml  requirements.txt  zappa_settings_example.json
admin/: forms.py  urls.py  views.py
auth/: models.py  urls.py  views.py
config/: settings.py  temp.py  urls.py
config/settings/: base.py  dev.py  devtest.py  prod.py  prodtest.py  test.py
employer/: forms.py  tests.py  urls.py  views.py
job_seeker/: tests.py  urls.py  views.py
jobs/: forms.py  models.py  tests.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_initial.py
main/: forms.py  tests.py  urls.py  views.py
portal_admin/: apps.py  forms.py  tests.py  urls.py  views.py
portal_auth/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
portal_auth/management/commands/: createsu.py
portal_auth/migrations/: 0001_initial.py
static/js/: search.js
templates/: base.html
templates/employer/: job_applications.html  my_jobs.html  new_job.html
templates/job_seeker/: my_applications.html
templates/jobs/: apply_job.html  job_detail.html  list.html
templates/main/: about.html  contact.html  index.html  privacy.html  terms.html
templates/portal_admin/: applications.html  create_job.html  dashboard.html  edit_job.html  edit_user.html  jobs.html  new_user.html  users.html
templates/portal_auth/: login.html  profile.html  register.html
utils/: tests.py  urls.py  utils.py  views.py
